# ttsLiveHelper

./: CMakeLists.txt  LICENSE  README.md  dialogabout.cpp  dialogabout.ui  dialogobsrtmpsettingsinfo.cpp  dialogobsrtmpsettingsinfo.h  dialogobsrtmpsettingsinfo.ui  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  startwindow.cpp  startwindow.h  startwindow.ui
SettingsPage/SettingsPage/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
SettingsPage/build-SettingsPage-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
SettingsPage/build-SettingsPage-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/.cmake/api/v1/reply/: cache-v2-0fe7864378b9415f5769.json  cmakeFiles-v1-bd1a9d55bd8118e6a640.json  codemodel-v2-73a8a097ba4dc470064e.json  directory-.-Release-9bcabe0dd113bae0a7ea.json  index-2023-09-18T12-02-16-0101.json  target-SettingsPage-Release-b781a1ef406bfc46bb98.json  target-SettingsPage_autogen-Release-e5e66db3d9943d7016af.json  target-SettingsPage_autogen_timestamp_deps-Release-9ff23f19ed904f685bb9.json
SettingsPage/build-SettingsPage-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/.qt/: QtDeploySupport.cmake
SettingsPage/build-SettingsPage-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/.qtc_clangd/: compile_commands.json
SettingsPage/build-SettingsPage-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/.qtc_clangd/.cache/clangd/index/: QFile.9FAFD33072C1B4E1.idx  QFileInfo.4E553A2AF8EA940C.idx  QGroupBox.61A5D7A5CEEAAC96.idx  QIcon.8076C1E1DEB4CFFD.idx  QMessageBox.39642AC55614E432.idx  QPlainTextEdit.DCC50C35F9775B07.idx  QTabWidget.B71B854C33628C82.idx  algorithm.6B647E9E125A2AF0.idx  array.4695B2B2A8A78BC4.idx  atomic.138C4A9112D5E078.idx  cctype.33BA47C4A481E5F1.idx  cerrno.BEE7E6D3103D8653.idx  clocale.81FDBED4EBC8F248.idx  corecrt.h.112BF025E57753E0.idx  corecrt_memcpy_s.h.06140A86DB87F3C3.idx  corecrt_memory.h.0E91AE19B74EC5FF.idx  corecrt_wstring.h.DF69AE0251B168F1.idx  crtdbg.h.71DB84DE9B350B01.idx  crtdefs.h.34F5C8CD81A9D8B2.idx  cstdio.C8237B301140AEAD.idx  cstdlib.F30194F4D36951CC.idx  cstring.1ECA57166B21DF6F.idx  ctime.5515B02E5743E01E.idx  cwchar.12279882F1F290ED.idx  eh.h.EFEB33E1CB7D5C8C.idx  exception.B8545B22FB35F109.idx  filesystem.E9E9350F00049136.idx  (+121 more)
SettingsPage/build-SettingsPage-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/SettingsPage_autogen/: deps
SettingsPage/build-SettingsPage-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/SettingsPage_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
